# master-programming-task

./: CMakeLists.txt  Dockerfile  ParseAndAddCatchTests.cmake  README.rst  crypt.cmake  docker.nix  eclipse-che.yml  encrypt.awk  find_answers.cmake  shell.nix  test_entry.cpp
.circleci/: config.yml
.github/workflows/: main.yml
csv_parser/: CMakeLists.txt  README.rst
csv_parser/include/: csv.hpp
csv_parser/tests/: csv.cpp
introduction/: CMakeLists.txt  README.rst
introduction/include/: introduction.hpp
introduction/tests/: introduction.cpp
iomanip/: CMakeLists.txt  README.rst
iomanip/include/: iomanip.hpp
iomanip/tests/: iomanip.cpp
iterator/: CMakeLists.txt  README.rst
iterator/include/: iterator.hpp
iterator/tests/: iterator.cpp
json_parser/: CMakeLists.txt  README.rst
json_parser/include/: json.hpp  variant_decorator.hpp
json_parser/tests/: json.cpp  quoted_string.cpp  variant_decorator.cpp
lab1/: CMakeLists.txt
lab1/tests/: introduction.cpp
lab2/: CMakeLists.txt
lab2/include/: iomanip.hpp
lab2/tests/: iomanip.cpp
lab3/: CMakeLists.txt  README.rst
lab3/include/: proxy.hpp
lab3/tests/: proxy.cpp
lab4/: CMakeLists.txt  README.rst
lab4/include/: iterator.hpp
lab4/tests/: iterator.cpp
lab5/: CMakeLists.txt
lab5/include/: variant.hpp
lab5/tests/: variant.cpp
lab6/: CMakeLists.txt  README.rst
lab6/include/: json.hpp  parser.hpp  quoted_string.hpp  variant_decorator.hpp
lab6/tests/: json.cpp  quoted_string.cpp  variant_decorator.cpp
lab7/: CMakeLists.txt
lab7/include/: type_map.hpp
lab7/tests/: type_map.cpp
lab8/: CMakeLists.txt  README.rst
lab8/tests/: strided_range.cpp
parser/: CMakeLists.txt
parser/include/: csv.hpp  json.hpp  parser.hpp  quoted_string.hpp
parser/tests/: csv.cpp  json.cpp  quoted_string.cpp  variant_decorator.cpp
parser_helper/: CMakeLists.txt  README.rst
parser_helper/include/: parser.hpp  quoted_string.hpp  variant_decorator.hpp
parser_helper/tests/: variant_decorator.cpp
proxy/: CMakeLists.txt  README.rst
proxy/include/: proxy.hpp
proxy/tests/: proxy.cpp
strided_range/: CMakeLists.txt  README.rst
strided_range/include/: strided_range.hpp
strided_range/tests/: strided_range.cpp
type_map/: CMakeLists.txt  README.rst
type_map/include/: type_map.hpp
type_map/tests/: main.cpp  type_map.cpp
variant/: CMakeLists.txt  README.rst
variant/include/: variant.hpp
variant/tests/: variant.cpp
